<resources>
    <string name="app_name">RTSPPlayer</string>
    <!--<string name="app_name">RtspClient</string>-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="url">URL:</string>
    <!--<string name="rtsp">rtsp://127.0.0.1:8554/live</string>-->
    <string name="rtsp">rtsp://192.168.42.1:554/live</string>
    <string name="udp">udp://@:1234</string>
    <string name="play">  Play  </string>
    <string name="cancle">Stop</string>

    <string name="fragment_camera_action_video">录像</string>
    <string name="fragment_camera_action_share">视频分享</string>
    <string name="fragment_camera_action_photo">拍照</string>
</resources>
